name: chatclient
version: 0.1.0
synopsis: Miso Chat Client
license: BSD3
cabal-version: 1.24
build-type: Simple

library
  hs-source-dirs:   

  exposed-modules:  

  if !impl(ghcjs)
    buildable:      False
  else
    buildable:      True

  ghc-options:      -Wall -Werror
  ghcjs-options:    -Wall -Werror

  default-language: Haskell2010


executable server
  hs-source-dirs:   server
  main-is:          Server.hs

  if impl(ghcjs)
    buildable:      False
  else
    build-depends:  base
                  , base-compat
                  , aeson
                  , lucid
                  , optparse-applicative
                  , servant
                  , servant-server
                  , servant-websockets
                  , text
                  , time
                  , warp
                  , wai-extra
                  , websockets

  ghc-options:      -Wall -Werror

  default-language: Haskell2010


executable client
  hs-source-dirs:   client
  main-is:          Client.hs
  other-modules:    Businesstypes.Id
                  , Businesstypes.ChatCommand
                  , Businesstypes.ChatMessage
                  , Businesstypes.ChatMessageLog
                  , Businesstypes.ChatRegistration
                  , Businesstypes.ChatRoom
                  , Businesstypes.Participant
                  , Chat
                  , ChatClient
                  , ChatRoom
                  , ChatRooms
                  , Login
                  , Module
                  , NavBar
                  , RestClient

  if !impl(ghcjs)
    buildable:      False
  else
    build-depends:  base
                  , chatclient
                  , aeson
                  , miso
                  , servant
                  , servant-client-ghcjs
                  , time
                  , text
                  , lens

  ghcjs-options:    -dedupe -Wall -Werror

  default-language: Haskell2010
